--- a/style.css
+++ b/style.css
@@ -22,6 +22,31 @@ body {
     align-items: center;
     justify-content: center;
     font-family: '04B30', 'sans-serif';
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #909191;
+}
+
+.awkwardAstronauts {
+    font-family: '04B30', 'sans-serif';
+    font-size: 3rem;
+    color: #909191;
+    padding-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.placeNumber {
+    text-align: right;
+    padding-right: 0.25rem;
+}
+
+.initials, .dash, .score {
+    text-align: center;
+    padding-right: 0.25rem;
+    padding-left: 0.25rem;
+}
+
+.hiScoreHeader {
+    padding-bottom: 1rem;
 }
