--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body {
     background-color: #202225;
 }
 
+#test-print {
+    color: #909191;
+}
+
 #container {
     display: flex;
     align-items: center;
